--- a/clean.ipynb
+++ b/clean.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 366,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,52 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = data[data['Price'].notnull()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 368,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1670 entries, 0 to 1828\n",
-      "Data columns (total 18 columns):\n",
-      " #   Column             Non-Null Count  Dtype \n",
-      "---  ------             --------------  ----- \n",
-      " 0   Screen size        1034 non-null   object\n",
-      " 1   Screen type        1451 non-null   object\n",
-      " 2   Rear camera        553 non-null    object\n",
-      " 3   Front camera       556 non-null    object\n",
-      " 4   Chip               1548 non-null   object\n",
-      " 5   RAM                1615 non-null   object\n",
-      " 6   ROM                1606 non-null   object\n",
-      " 7   Batery             1404 non-null   object\n",
-      " 8   OS                 1414 non-null   object\n",
-      " 9   Screen resolution  1436 non-null   object\n",
-      " 10  Screen feature     188 non-null    object\n",
-      " 11  CPU type           222 non-null    object\n",
-      " 12  Bluetooth          258 non-null    object\n",
-      " 13  Refesh rate        174 non-null    object\n",
-      " 14  Price              1670 non-null   object\n",
-      " 15  Camera             1035 non-null   object\n",
-      " 16  Mobile network     898 non-null    object\n",
-      " 17  Screen             87 non-null     object\n",
-      "dtypes: object(18)\n",
-      "memory usage: 247.9+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "data.info()"
    ]
   },
   {
@@ -238,16 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.drop(['Rear camera', 'Front camera', 'Screen feature', 'CPU type', 'Bluetooth', 'Refesh rate', 'Screen'], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -276,6 +226,8 @@
     }
    ],
    "source": [
+    "data.drop(['Rear camera', 'Front camera', 'Screen feature', 'CPU type', 'Bluetooth', 'Refesh rate', 'Screen'], axis=1, inplace=True)\n",
+    "\n",
     "data.info()"
    ]
   },
@@ -288,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +273,7 @@
        "       '6.52 \"', '6.7\" \"', '5.4 \"'], dtype=object)"
       ]
      },
-     "execution_count": 371,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +296,7 @@
        "       6.26, 6.47, 6.2 , 5.6 , 1.77])"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +385,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +407,7 @@
        "Name: Screen type, dtype: int64"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +568,7 @@
        "       'Spreadtrum SC9832E', '0.08 MP'], dtype=object)"
       ]
      },
-     "execution_count": 375,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +592,7 @@
        "Name: Chip, dtype: int64"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +654,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +678,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +731,7 @@
        "       6.4000e+01])"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +753,7 @@
        "       4.096000e+03,          nan, 2.400000e+01, 2.560000e+02])"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +875,7 @@
        "       '3000 mAh', 'Masstel. Xem thông tin hãng'], dtype=object)"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +900,7 @@
        "       4520., 1000., 1400., 1900., 2000., 4352., 3240., 2438., 2018.])"
       ]
      },
-     "execution_count": 383,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1005,7 @@
        "       'Android 10 (Go Edition)', '2 Nano SIM'], dtype=object)"
       ]
      },
-     "execution_count": 384,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1027,7 @@
        "Name: OS, dtype: int64"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1121,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1146,7 @@
        "       2851200., 1120000.,   20480.,   38720.,  921600.])"
       ]
      },
-     "execution_count": 387,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1241,7 @@
        "       'QVGA (320 x 240 pixels), VGA (0.3 MP)'], dtype=object)"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1261,7 @@
        "array([0, 5, 2, 4, 3, 1], dtype=int64)"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1290,7 @@
        "         3.])"
       ]
      },
-     "execution_count": 390,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1350,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1372,7 @@
        "Name: Mobile network, dtype: int64"
       ]
      },
-     "execution_count": 393,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1533,7 @@
        "       '550.000₫ '], dtype=object)"
       ]
      },
-     "execution_count": 394,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1564,7 @@
        "Name: Price, Length: 1670, dtype: int64>"
       ]
      },
-     "execution_count": 395,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1647,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1886,7 +1838,7 @@
        "[1670 rows x 12 columns]"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1925,7 +1877,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 397,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1943,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2195,7 +2147,7 @@
        "[1670 rows x 12 columns]"
       ]
      },
-     "execution_count": 398,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2222,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2474,7 +2426,7 @@
        "[1670 rows x 12 columns]"
       ]
      },
-     "execution_count": 399,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2502,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2635,7 +2587,7 @@
        "      <th>1817</th>\n",
        "      <td>6.133899</td>\n",
        "      <td>LCD</td>\n",
-       "      <td>snapdragon</td>\n",
+       "      <td>mediatek</td>\n",
        "      <td>3072.000000</td>\n",
        "      <td>32768.000000</td>\n",
        "      <td>4000.000000</td>\n",
@@ -2650,7 +2602,7 @@
        "      <th>1818</th>\n",
        "      <td>6.133899</td>\n",
        "      <td>LCD</td>\n",
-       "      <td>snapdragon</td>\n",
+       "      <td>mediatek</td>\n",
        "      <td>2048.000000</td>\n",
        "      <td>32768.000000</td>\n",
        "      <td>3000.000000</td>\n",
@@ -2665,7 +2617,7 @@
        "      <th>1819</th>\n",
        "      <td>6.133899</td>\n",
        "      <td>LCD</td>\n",
-       "      <td>snapdragon</td>\n",
+       "      <td>mediatek</td>\n",
        "      <td>2048.000000</td>\n",
        "      <td>32768.000000</td>\n",
        "      <td>2950.000000</td>\n",
@@ -2680,7 +2632,7 @@
        "      <th>1826</th>\n",
        "      <td>6.133899</td>\n",
        "      <td>LCD</td>\n",
-       "      <td>snapdragon</td>\n",
+       "      <td>mediatek</td>\n",
        "      <td>5882.149029</td>\n",
        "      <td>152752.761905</td>\n",
        "      <td>4401.634448</td>\n",
@@ -2695,7 +2647,7 @@
        "      <th>1828</th>\n",
        "      <td>6.133899</td>\n",
        "      <td>LCD</td>\n",
-       "      <td>snapdragon</td>\n",
+       "      <td>mediatek</td>\n",
        "      <td>5882.149029</td>\n",
        "      <td>152752.761905</td>\n",
        "      <td>4401.634448</td>\n",
@@ -2719,11 +2671,11 @@
        "3        6.430000        OLED  snapdragon  4096.000000   65536.000000   \n",
        "4        6.700000        OLED       apple  6144.000000  131072.000000   \n",
        "...           ...         ...         ...          ...            ...   \n",
-       "1817     6.133899         LCD  snapdragon  3072.000000   32768.000000   \n",
-       "1818     6.133899         LCD  snapdragon  2048.000000   32768.000000   \n",
-       "1819     6.133899         LCD  snapdragon  2048.000000   32768.000000   \n",
-       "1826     6.133899         LCD  snapdragon  5882.149029  152752.761905   \n",
-       "1828     6.133899         LCD  snapdragon  5882.149029  152752.761905   \n",
+       "1817     6.133899         LCD    mediatek  3072.000000   32768.000000   \n",
+       "1818     6.133899         LCD    mediatek  2048.000000   32768.000000   \n",
+       "1819     6.133899         LCD    mediatek  2048.000000   32768.000000   \n",
+       "1826     6.133899         LCD    mediatek  5882.149029  152752.761905   \n",
+       "1828     6.133899         LCD    mediatek  5882.149029  152752.761905   \n",
        "\n",
        "           Batery       OS  Screen resolution  Price  Mobile network  \\\n",
        "0     5000.000000  android       2.592000e+06  10190             5.0   \n",
@@ -2754,7 +2706,7 @@
        "[1670 rows x 12 columns]"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2779,7 +2731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
